Update Top Level Description and Examples

--- a/aurelius/README.Rmd
+++ b/aurelius/README.Rmd
@@ -48,7 +48,7 @@ as PFA. PFA is a plain-text JSON format.
   # build a model
   lm_model <- lm(mpg ~ hp, data = mtcars)
   
-  # convert the lm object to a list-of-lists PFA representation
+  # convert the lm object to a list of lists PFA representation
   lm_model_as_pfa <- pfa(lm_model)
   
   # save as plain-text JSON
