--- a/aurelius/README.Rmd
+++ b/aurelius/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 # aurelius
 
-[![Build Status](https://travis-ci.org/opendatagroup/hadrian/hadrian.png?branch=master)](https://travis-ci.org/opendatagroup/hadrian) [![Coverage Status](https://img.shields.io/codecov/c/github/opendatagroup/hadrian/master.svg)](https://codecov.io/github/opendatagroup/hadrian?branch=master)
+[![Build Status](https://travis-ci.org/ReportMort/hadrian/hadrian.png?branch=master)](https://travis-ci.org/ReportMort/hadrian) [![Coverage Status](https://img.shields.io/codecov/c/github/ReportMort/hadrian/master.svg)](https://codecov.io/github/ReportMort/hadrian?branch=master)
 
 **aurelius** is a toolkit for generating PFA in the R programming language. It 
 focuses on porting models to PFA from their R equivalents.
@@ -50,10 +50,19 @@ as PFA. PFA is a plain-text JSON format.
   
   # convert the lm object to a list of lists PFA representation
   lm_model_as_pfa <- pfa(lm_model)
-  
-  # save as plain-text JSON
-  json(lm_model_as_pfa, fileName = "myModel.pfa")
+```
 
+The model can be saved as PFA JSON and used in other systems.
+
+```{r write-model, eval=FALSE}
+  # save as plain-text JSON
+  write_pfa(lm_model_as_pfa, file = "my-model.pfa")
+```
+
+Just as models can be written as a PFA file, they can be read.
+
+```{r read-model, eval=FALSE}
+  my_model <- read_pfa("my-model.pfa")
 ```
 
 ### License
